fixing plugin page layout

--- a/src/src/app/app.scss
+++ b/src/src/app/app.scss
@@ -27,6 +27,10 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
   }
 }
 
+.fix-margin {
+  margin-right: 0px !important;
+}
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
