--- a/src/src/app/views/base/plugins/list/list.html
+++ b/src/src/app/views/base/plugins/list/list.html
@@ -1,4 +1,4 @@
-<section class="bg-black row less">
+<section class="bg-black row less fix-margin">
   <div class="container-fluid">
     <div class="col-md-11">
       <input type="text" class="form-control" ng-model="controller.query" ng-change="controller.search()" placeholder="Search">
