<3 Changing gulp for phulp

--- a/src/src/app/app.scss
+++ b/src/src/app/app.scss
@@ -9,8 +9,6 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
  *  Do not remove the comments below. It's the markers used by wiredep to inject
  *  sass dependencies when defined in the bower.json of your dependencies
  */
-// bower:scss
-// endbower
 
 .browsehappy {
   margin: 0.2em 0;
@@ -35,5 +33,5 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
  */
-// injector
-// endinjector
+/* inject */
+/* endinject */
