--- a/src/src/app/views/base/home/home.html
+++ b/src/src/app/views/base/home/home.html
@@ -1,6 +1,6 @@
 <div class="presentation">
   <div class="container text-center">
-    <h1 class="super-title">Phulp</h1>
+    <img src="https://raw.githubusercontent.com/reisraff/phulp/master/phulp.png" />
     <h2 class="uppercase">The task manager for PHP</h2>
   </div>
 </div>
