--- a/src/src/app/app.scss
+++ b/src/src/app/app.scss
@@ -5,6 +5,12 @@
 $navbar-inverse-link-color: #5AADBB;
 $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
+@import url('https://fonts.googleapis.com/css?family=Courgette');
+
+body {
+  /*font-family: Open+Sans;*/
+}
+
 /**
  *  Do not remove the comments below. It's the markers used by wiredep to inject
  *  sass dependencies when defined in the bower.json of your dependencies
