--- a/src/src/app/packages/menuScroll/menuScroll.html
+++ b/src/src/app/packages/menuScroll/menuScroll.html
@@ -1,15 +1,22 @@
 <div class="cd-secondary-nav" ng-show="menuScrollMenuFixed"></div>
 
-<nav id="menuScroll-element" class="navbar-inverse cd-secondary-nav">
+<nav id="menuScroll-element" class="navbar-inverse cd-secondary-nav phulp-nav">
   <a href="javascript://" class="cd-secondary-nav-trigger" ng-click="controller.menu()">Menu<span></span></a>
 
-  <div class="container-fluid">
+  <div class="container">
+    <img src="https://raw.githubusercontent.com/reisraff/phulp/master/phulp.png">
     <ul class="nav navbar-nav navbar-right">
       <li ng-repeat="item in items">
-        <a href="javascript://" class="cd-anchor" hash="{{item.hash}}" state="{{item.state}}" ng-click="controller.clicked(item.state, item.hash, item.url)">
-          <img ng-show="item.img" ng-src="{{item.img.src}}" class="{{item.img.classes}}" alt="{{item.img.alt}}">
-          <b ng-show="item.bold">{{ item.label }}</b>
-          <span ng-hide="item.bold">{{ item.label }}</span>
+        <a ng-if="item.hash" href="javascript://" class="cd-anchor" ng-click="controller.clicked(item.hash)">
+          <span>{{ item.label }}</span>
+        </a>
+
+        <a ng-if="item.state" href="javascript://" ui-sref="{{item.state}}">
+          <span>{{ item.label }}</span>
+        </a>
+
+        <a ng-if="item.url" href="{{ item.url }}">
+          <span>{{ item.label }}</span>
         </a>
       </li>
     </ul>
