--- a/src/src/app/views/base/home/home.scss
+++ b/src/src/app/views/base/home/home.scss
@@ -7,6 +7,12 @@ h1, h2, h3, h4, h5 {
   font-weight: bold;
 }
 
+.phulp-title {
+  font-weight: 100;
+  font-size: 50px;
+  line-height: 68px;
+}
+
 p {
   margin-bottom: 50px;
 }
@@ -49,7 +55,7 @@ article {
 }
 
 .bg-php-light-color {
-  background-color: #8892BF;
+  background-color: #3862a7;
 }
 
 .less {
@@ -82,18 +88,105 @@ a.grey:link {
 }
 
 .presentation {
-  background-color: #8892BF;
+  background-color: #3862a7;
 
   color: #FFF;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 1) !important;
 
-  padding-top: 180px;
+  padding-top: 150px;
 
   height: 100%;
-  min-height: 590px;
+  min-height: 1000px;
+}
+
+.presentation p {
+  margin-top: 220px;
+  margin-bottom: 220px;
+}
+
+.stats {
+  padding: 100px 0 100px 0;
+}
+
+.contribute {
+  background: #273547;
+  padding: 100px 0 100px 0;
+}
+
+.whats-phulp {
+  color: #000;
+  font-size: 32px;
+  font-family: 'Courgette', cursive;
+}
+
+.whats-phulp-description {
+  font-family: 'Courgette', cursive;
+  font-size: 20px;
+}
+
+.big {
+  font-size: 90px;
+}
+
+.whats-phulp-img {
+  width: 125px;
 }
 
 .full-height {
   height: 100%;
   min-height: 590px;
+}
+
+.phulp-btn {
+  color: #000 !important;
+  font-size: 25px;
+  cursor: pointer;
+  background: #FFF  !important;
+  border-radius: 30px;
+  text-shadow: none;
+  border:none;
+}
+
+.phulp-btn:hover {
+  color: #FFF !important;
+  font-weight: bold;
+  background: #3862a7 !important;
+  text-decoration: underline;
+  border:none;
+}
+
+.phulp-btn:visited {
+  color: #FFF;
+}
+
+.phulp-terminal {
+  border-radius: 3px;
+  background-color: #2e3436;
+  width: 80%;
+  min-height: 260px;
+  padding: 18px 25px;
+  color: #3fD53E;
+  font-weight: 600;
+  font-size: 17px;
+  text-align: left;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1) !important;
+}
+
+.phulp-help {
+  font-family: monospace;
+  font-weight: normal;
+  font-size: 20px;
+}
+
+.white {
+  color: white;
+}
+
+.yellow {
+  color: yellow;
+}
+
+.footer {
+  background-color: #3862a7;
+  padding: 80px 0;
 }
