--- a/src/src/app/views/base/home/home.scss
+++ b/src/src/app/views/base/home/home.scss
@@ -150,7 +150,7 @@ a.grey:link {
 .phulp-btn:hover {
   color: #FFF !important;
   font-weight: bold;
-  background: #3862a7 !important;
+  background: transparent !important;
   text-decoration: underline;
   border:none;
 }
