--- a/src/src/app/views/base/plugins/list/list.html
+++ b/src/src/app/views/base/plugins/list/list.html
@@ -1,4 +1,4 @@
-<!-- <div class="cd-secondary-nav"></div> -->
+<div class="cd-secondary-nav"></div>
 
 <nav id="menuScroll-element" class="navbar-inverse cd-secondary-nav phulp-nav is-fixed">
   <a href="javascript://" class="cd-secondary-nav-trigger" ng-click="controller.menu()">Menu<span></span></a>
