fixing some stuff

--- a/src/src/app/packages/menuScroll/menuScroll.html
+++ b/src/src/app/packages/menuScroll/menuScroll.html
@@ -1,6 +1,6 @@
-<div class="cd-secondary-nav" ng-show="menuScrollMenuFixed"></div>
+<!-- <div class="cd-secondary-nav" ng-show="menuScrollMenuFixed"></div> -->
 
-<nav id="menuScroll-element" class="navbar-inverse cd-secondary-nav phulp-nav">
+<nav id="menuScroll-element" class="navbar-inverse cd-secondary-nav phulp-nav plugins">
   <a href="javascript://" class="cd-secondary-nav-trigger" ng-click="controller.menu()">Menu<span></span></a>
 
   <div class="container">
