--- a/src/src/app/views/base/home/home.html
+++ b/src/src/app/views/base/home/home.html
@@ -30,7 +30,7 @@
         </p>
 
         <p class="whats-phulp-description">
-          It is a framework that provide automation for build your stuff, manage your tasks easily.
+          It is a framework that provides automation for build your stuff, and manage your tasks easily.
         </p>
       </div>
       <div class="col-md-4">
